--- a/src/components/datatable_site/sitedata.scss
+++ b/src/components/datatable_site/sitedata.scss
@@ -7,26 +7,44 @@
         font-weight: 600;
         font-size: 24px;
         color: #000;
+        padding-top: 15pt;
         margin-bottom: 10px;
         display: flex;
         align-items: center;
         justify-content: space-between;
 
         .link{
-            text-decoration: none;
-            color: teal;
-            font-size: 16px;
-            font-weight: 400;
-            border: 1px solid teal;
-            padding: 5px;
-            border-radius: 5px;
-            background-color: #fff;
-            cursor: pointer;
+            // text-decoration: none;
+            // color: teal;
+            // font-size: 16px;
+            // font-weight: 400;
+            // border: 1px solid teal;
+            // padding: 5px;
+            // border-radius: 5px;
+            // background-color: #fff;
+            // cursor: pointer;
+
+            .radioButton{
+                padding-left: 0pt;
+                margin-left: 25pt;
+                align-items: center;
+                column-count: 2;
+                gap: 15pt;
+            }
+           
         }
+        
     }
 
     button{
         gap: 5px;
+    }
+
+    .rowColor{
+        background-color: rgba(211, 211, 211, 0.521);
+        .tableCellName{
+            font-weight: 600;
+        }
     }
 
     
