--- a/src/components/hotlinetable/hotlinetable.scss
+++ b/src/components/hotlinetable/hotlinetable.scss
@@ -13,6 +13,26 @@
         align-items: center;
         justify-content: space-between;
         padding-bottom: 5pt;  
+
+        .link{
+            text-decoration: none;
+            color: teal;
+            font-size: 16px;
+            font-weight: 400;
+            border: 1px solid teal;
+            padding: 5px;
+            border-radius: 5px;
+            background-color: #fff;
+            cursor: pointer;
+        }
+    }
+
+    .tittle{
+        background-color: rgba(211, 211, 211, 0.521);
+
+        .tableCellName{
+            font-weight: 600;
+        }
     }
     
     
