--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,17 +1,17 @@
 .home{
     display: flex;
+    width: 100%;
 
     .homeContainer{
         flex: 6;
 
         .widgets, .charts{
             display: flex;
-            padding: 20px;
-            gap: 20px   ;
+            padding: 5px 25px ;
         }
 
         .charts{
-            padding: 5px 20px ;
+            padding: 5px 25px ;
         }
 
         .listContainer{
