--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -17,7 +17,6 @@
             flex-direction: column;
             justify-content: center;
         }
-
         .loginLeft{
 
             .loginLogo{
@@ -58,11 +57,13 @@
     
                 .loginInput{
                     height: 50px;
-                    border-radius: 10px;
+                    border-radius: 4px;
                     border: 1px solid rgb(187, 187, 187);
                     font-size: 15px;
                     font-weight: 500;
-                    padding-left: 20px;
+                    padding-left: 15px;
+                    margin-left: 5pt;
+                    width: 29vw;
                 }
 
                 .loginInput:focus{
@@ -70,8 +71,8 @@
                 }
 
                 .loginButton{
-                    height: 50px;
-                    border-radius: 10px;
+                    height: 40px;
+                    border-radius: 5px;
                     border: none;
                     background-color: #004AAD;
                     color: #fff;
@@ -81,7 +82,7 @@
                 }
 
                 .loginButton:hover{
-                    height: 50px;
+                    height:40px;
                     border-radius: 10px;
                     border: none;
                     background-color: #043f8b;
@@ -89,6 +90,14 @@
                     font-size: 20px;
                     font-weight: 500;
                     cursor: pointer;
+
+                    .signUp{
+                        display: flex;
+                        align-items: center;
+                        font-size: 8pt;
+                        text-decoration: none;
+                       
+                    }
                 }
 
                
